--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-  <div id="app">Hello</div>
+  <div id="app"></div>
 
 </body>
 </html>
